--- a/plug.htm
+++ b/plug.htm
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
+    <header>
+        <!--//Шапку сайта делаешь сам,по макету который я кидал!
+        Если что,то это делается не так уж и трудно!(Надеюсь)-->
+    </header>
     <h1>Hello</h1>
     <p>Я хочу новую цепь,не снятую с чьей-либо шеи</p>
+    <footer>
+        <!--Это я оставляю за тобой!-->
+    </footer>
 </body>
 </html>
