--- a/plug.htm
+++ b/plug.htm
@@ -16,6 +16,9 @@
     <p>Я хочу новую цепь,не снятую с чьей-либо шеи</p>
     <footer>
         <!--Это я оставляю за тобой!-->
+        <h2>
+            Sosi
+        </h2>
     </footer>
 </body>
 </html>
